--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,6 +10,9 @@ html(lang="en")
         header
             h1 Noom
         main
+            form
+                input(type="text", placeholder="Choose a nickname", required)
+                button Save
             ul
             form
                 input(type="text", placeholder="Write a message", required)
