--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,11 +10,11 @@ html(lang="en")
         header
             h1 Noom
         main
-            form
+            form#nickname
                 input(type="text", placeholder="Choose a nickname", required)
                 button Save
             ul
-            form
+            form#message
                 input(type="text", placeholder="Write a message", required)
                 button Send
         
