--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,25 +6,22 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Noom
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+        script(src="https://kit.fontawesome.com/e6c97e9e3a.js" crossorigin="anonymous")
     body 
         header
             h1 Noom
         main
             div#welcome
-                form
+                form    
                     input(placeholder="room name", required, type="text")
-                    button Enter Room
-                h4 Open Rooms: 
-                ul
+                    button Enter room
+            div#call
+                div#myStream
+                    video#myFace(autoplay,playsinline, width="400", height="400")
+                    button#mute <i class="fa-solid fa-microphone"></i>
+                    button#camera <i class="fa-solid fa-video"></i>
+                    select#cameras
+                    video#peerFace(autoplay,playsinline, width="400", height="400")
 
-            div#room
-                h3
-                ul
-                form#name
-                    input(placeholder="nickname",required,type="text")
-                    button Save
-                form#msg
-                    input(placeholder="message",required,type="text")
-                    button Send
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
